fixed so that ferry updates also has a gap for their startTtime and EndTime element, also added some fonts for testing

--- a/local-travel-weather-dashboard/src/index.css
+++ b/local-travel-weather-dashboard/src/index.css
@@ -1,3 +1,6 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 @import "tailwindcss";
 
 @theme {
@@ -18,6 +21,12 @@
   --container-trafficHeaderSmall: 605px;
   --container-bottomContainerCol: 851px;
   /* Custom container query ranges */
+
+  /* Fonts */
+  --font-poppins: "Poppins", sans-serif;
+  --font-lato: "Lato", "sans-serif";
+  --font-montserrat: "Montserrat", sans-serif;
+  /* Fonts */
 }
 
 #root {
